# openclaw

./: CLAUDE.md  install-cli.sh  install.sh
skills/hyperframes/: DESIGN.ais-example.md  MOTION_PHILOSOPHY.md  SKILL.md
skills/remotion/: SKILL.md
skills/remotion/rules/: audio.md  compositions.md  sequencing.md  subtitles.md  text-animations.md  timing.md  transitions.md  videos.md
skills/video-use/: SKILL.md  install.md  pyproject.toml
skills/video-use/helpers/: grade.py  pack_transcripts.py  render.py  timeline_view.py  transcribe.py  transcribe_batch.py
